return usertype
