# storage/api-docs/api-docs.json
@@ -278,6 +278,7 @@
                                 "region": null,
                                 "email": "example@mail.com",
                                 "photo": null,
+                                "usertype": 2,
                                 "created_at": "2018-08-01 15:26:05",
                                 "updated_at": "2018-08-01 15:26:05"
                             }
@@ -1131,6 +1132,11 @@
                     "description": "\u043f\u043e\u0441\u0438\u043b\u0430\u043d\u043d\u044f \u043d\u0430 \u0444\u043e\u0442\u043e \u043f\u0440\u043e\u0444\u0456\u043b\u044e",
                     "type": "string",
                     "example": "https://host/img/users/1542.jpg"
+                },
+                "usertype": {
+                    "description": "\u0442\u0438\u043f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430: 1. \u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u043e\u0432\u0430\u043d\u0438\u0439 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447, \u0437 \u041d\u0415 \u043f\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043d\u0438\u043c email; 2. \u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447 \u0437 \u043f\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043d\u0438\u043c email; 3. PRO \u0430\u043a\u043a\u0430\u0443\u043d\u0442",
+                    "type": "integer",
+                    "example": "1"
                 },
                 "created_at": {
                     "description": "\u0434\u0430\u0442\u0430 \u0456 \u0447\u0430\u0441 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0457",
